syntax = "proto3";

package book;

service BookService {
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (GetBookByIdResponse);

  rpc CreateAuthor(CreateAuthorRequest) returns (CreateAuthorResponse);
  rpc GetAllAuthors(GetAllAuthorsRequest) returns (GetAllAuthorsResponse);
  rpc GetAuthorById(GetAuthorByIdRequest) returns (GetAuthorByIdResponse);

  rpc CreateMediaFile(CreateMediaFileRequest) returns (CreateMediaFileResponse);
  rpc UploadMediaFile(UploadMediaFileRequest) returns (UploadMediaFileResponse);

  rpc CreateChapter(CreateChapterRequest) returns (CreateChapterResponse);
  rpc GetAllChapters(GetAllChaptersRequest) returns (GetAllChaptersResponse);
  rpc GetChaptersByBookId(GetChaptersByBookIdRequest) returns (GetChaptersByBookIdResponse);
  rpc GetChapterById(GetChapterByIdRequest) returns (GetChapterByIdResponse);
  rpc EditChapter(EditChapterRequest) returns (EditChapterResponse);
  rpc AddAudioFile(AddAudioFileRequest) returns (AddAudioFileResponse);

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);

  rpc CreateRating(CreateRatingRequest) returns (CreateRatingResponse);

  rpc CreateLibrary(CreateLibraryRequest) returns (CreateLibraryResponse);
  rpc GetAllLibraries(GetAllLibrariesRequest) returns (GetAllLibrariesResponse);
  rpc GetLibraryById(GetLibraryByIdRequest) returns (GetLibraryByIdResponse);
  rpc GetLibrariesByUserId(GetLibrariesByUserIdRequest) returns (GetLibrariesByUserIdResponse);

  rpc CreateHistory(CreateHistoryRequest) returns (CreateHistoryResponse);

}
message CreateHistoryRequest {
  string user = 1;
  string chapterId = 2;
  string voice = 3;
}
message CreateHistoryResponse {
  string id = 1;
  string message = 2;
}

message GetLibrariesByUserIdRequest {
  string id = 1; 
}
message LibraryForGlbui {
  string id = 1;
  string name = 2;
  repeated BookInLibrary books = 3;
}
message GetLibrariesByUserIdResponse {
  repeated LibraryForGlbui libraries = 1;
}

message GetLibraryByIdRequest {
  string id = 1;
}
message GetLibraryByIdResponse {
  string id = 1;
  string user = 2;
  string name = 3;
  repeated BookInLibrary books = 4;
}

message GetAllLibrariesRequest {}
message GetAllLibrariesResponse {
  repeated Library libraries = 1;
}
message BookInLibrary {
  string id = 1;
  string title = 2;
}
message Library {
  string id = 1;
  string user = 2;
  string name = 3;
  repeated BookInLibrary books = 4;
}


// message GetAllLibrariesRequest {}
// message GetAllLibrariesResponse {
//   repeated Library libraries = 1;
// }
// message Library {
//   string id = 1;
//   string user = 2;
//   string name = 3;
//   // repeated BookInLibrary books = 4;
// }
// message BookInLibrary {
//   string id = 1;
//   string title = 2;
// }

message CreateLibraryRequest {
  string user = 1;
  string name = 2;
  repeated string book_ids = 3;
}
message CreateLibraryResponse {
  string id = 1;
  string message = 2;
}

message GetBookByIdRequest {
  string id = 1;
}
message GetBookByIdResponse {
  BookForGetBookById book = 1;
}
message BookForGetBookById {
  string id = 1;
  string title = 2;
  Author author = 3;
  repeated string genres = 4;
  string description = 5;
  int32 publish_year = 6;
  string cover_img = 7;
  repeated Chapter chapters = 8;
  repeated RatingForGetBookById ratings = 9;
  int32 count_rating = 10;
  float avg_rating = 11;
}
message ChapterForGetBookById {
  string id = 1;
  string name = 2;
}
message RatingForGetBookById {
  string id = 1;
  string user = 2;
  int32 rating = 3;
  string review = 4;
}

message GetAllBooksRequest {}
message GetAllBooksResponse {
  repeated Book books = 1;
}
message Book {
  string id = 1;
  string title = 2;
  AuthorForGetAllBooks author = 3;
  repeated string genres = 4;
  string description = 5;
  int32 publish_year = 6;
  string cover_img = 7;
  float avg_rating = 8;
  int32 count_rating = 9;
}
message AuthorForGetAllBooks {
  string id = 1;
  string pen_name = 2;
  string name = 3;
}

message CreateRatingRequest {
  string user = 1;
  string book_id = 2;
  int32 rating = 3;
  string review = 4;
}
message CreateRatingResponse {
  string id = 1;
  string user = 2;
  string book_id = 3;
  int32 rating = 4;
  string review = 5;
}

message GetAuthorByIdRequest {
  string id = 1;
}
message GetAuthorByIdResponse {
  Author author = 1;
}

message GetAllAuthorsRequest {}
message GetAllAuthorsResponse {
  repeated Author authors = 1;
}
message Author {
  string id = 1;
  string user = 2;
  string pen_name = 3;
  string name = 4;
  string description = 5;
  repeated BookFnGetAllAuthors books = 6;
}
message BookFnGetAllAuthors {
  string id = 1;
  string title = 2;
}

message AddAudioFileRequest {
  string chapter_id = 1;
  string file_name = 2;
  bytes file_content = 3; // File content (binary data)
  string file_type = 4;   // e.g., "audio/mpeg"
  int32 file_size = 5;
}
message AddAudioFileResponse {
  string media_file_id = 1;
  string chapter_id = 2;
  string file_url = 3;
}

message CreateCommentRequest {
  string chapter_id = 1;
  string user = 2;
  string comment = 3;
}

message CreateCommentResponse {
  string id = 1;
  string chapter_id = 2;
  string user = 3;
  string comment = 4;
  string created_at = 5;
}

message EditChapterRequest {
  string chapter_id = 1;
  string name = 2;
  string text_file_id = 3;
  repeated string audio_file_ids = 4;
}

message EditChapterResponse {
  string message = 1;
}

message GetChapterByIdRequest {
  string chapter_id = 1;
}

message GetChapterByIdResponse {
  string id = 1;
  string name = 2;
  string book_id = 3;
  string text_file_id = 4;
  repeated string audio_file_ids = 5;
  repeated Comment comments = 6;
}

message Comment {
  string id = 1;
  string user = 2;
  string comment = 3;
  string created_at = 4;
}

message GetChaptersByBookIdRequest {
  string book_id = 1;
}
message GetChaptersByBookIdResponse {
  repeated Chapter chapters = 1;
}
message Chapter {
  string id = 1;
  string name = 2;
  string book_id = 3;
  string text_file_id = 4;
  repeated string audio_file_ids = 5;
}
message GetAllChaptersRequest {}
message GetAllChaptersResponse {
  repeated Chapter chapters = 1;
}

message CreateChapterRequest {
  string name = 1;
  string book_id = 2;
  string text_file_name = 3;
  string text_file_content = 4;
  string audio_file_name = 5;
  string audio_file_content = 6;
}

message CreateChapterResponse {
  string chapter_id = 1;
  string message = 2;
}

message UploadMediaFileRequest {
  string file_name = 1;
  bytes file_content = 2; // File dưới dạng byte
  string file_type = 3;
}

message UploadMediaFileResponse {
  string file_url = 1; // URL public của file
}

message CreateMediaFileRequest {
  string file_collection = 1;
  string file_url = 2;
  string file_type = 3;
  int32 file_size = 4;
}

message CreateMediaFileResponse {
  string id = 1;
  string file_collection = 2;
  string file_url = 3;
  string file_type = 4;
  int32 file_size = 5;
}

message CreateAuthorRequest {
  string user = 1;
  string pen_name = 2;
  string name = 3;
  string description = 4;
}

message CreateAuthorResponse {
  string id = 1;
  string user = 2;
  string pen_name = 3;
  string name = 4;
  string description = 5;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  repeated string genres = 3;
  string description = 4;
  int32 publish_year = 5;
}

message CreateBookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
}

